Version 17.39 - 18 June 2016

- diskdrake:
  o fix ESP tagging in some cases

Version 17.38 - 16 June 2016

- diskdrake:
  o fix offering to create a GRUB_BIOS partition in custom mode (mga#18656)
  o fix inverted test when checking need for a GRUB_BIOS partition (mga#18704)

Version 17.37 - 12 June 2016

- diskdrake:
  o try harder to guess if we need a GRUB_BIOS partition (mga#18656)

Version 17.36 - 11 June 2016

- diskdrake:
  o add a GRUB_BIOS partition if needed (mga#18656)
  o MBR limit really is 2TiB, not 4, so use GPT for disks > 2TiB

Version 17.34 - 6 June 2016

- drakboot:
  o enable to (un)install os-prober (mga#16010, mga#18538)
  o fix reading back last grub2 entry
  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
  o only overwrite install.sh when actually installing boot loader (mga#17455)
  o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
  o stop offering grub legacy & lilo on new installs (mga#18583)
- running commands as user:
  o fix the fallback when the helper didn't provide the real UID (mga#18288)
  o guess the right user after the switch to polkit (mga#18288)

Version 17.33 - 27 May 2016

- list all drivers needing a proprietary driver
- localedrake:
  o install the right IM packages on Plasma when using fcitx

Version 17.30 - 7 May 2016

- install nonfree firmware for amdgpu, i915, nouveau

Version 17.29 - 4 May 2016

- localedrake:
  o install the right IM packages on Plasma
- harddrake2:
  o don't class Logitech wired kbd+mouse as unknown (mga#3510)

Version 17.28 - 26 April 2016

- recognize new kernel-4.6 drivers

Version 17.25 - 1 April 2016

- diskdrake:
  o fix detecting nvme devices as block devices
  o fix displaying partitions when there's only one disk
    (and the resulting crash: mga#18076)

Version 17.24 - 23 March 2016

- use systemd-detect-virt for detecting virtualization technology

Version 17.22 - 21 March 2016

- display_help:
 o port from WebKit1 to WebKit2 (mga#15031)
