@@ -1,3 +1,6 @@
+- bootloader:
+  o ensure we've the right grub2 flavor (mga#18739)
+
 Version 17.39 - 18 June 2016
 
 - partionning:
